# tiralabra

./: .gitignore  README.md
dokumentaatio/: Viikkoraportti_1.md  asennus_ja_kayttoohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
lausegeneraattori/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
lausegeneraattori/src/: arpa.py  gui.py  gutenberg_lukija.py  index.py  jasennin.py  konsoli.py  ohjelma.py  tekstikayttoliittyma.py  tiedostonlukija.py
lausegeneraattori/src/data/: baskervillen_koira.txt  neljan_merkit.txt  onnen_orja.txt  sota_ja_rauha_1.txt  taistelu_roomasta_1.txt  taistelu_roomasta_2.txt  toinen_tahra.txt  vainottu.txt  valkopukuinen_nainen_1.txt  varastettu_sotilassalaisuus.txt  venajan_historia.txt
lausegeneraattori/src/data/sherlock/: toinen_tahra.txt
lausegeneraattori/src/tests/: jasennin_test.py  ohjelma_test.py  stubs.py  suorituskykytestaus.py  tulosteet.py
lausegeneraattori/src/tietorakenteet/: trie.py  trie_solmu.py
lausegeneraattori/src/tietorakenteet/tests/: trie_test.py
lausegeneraattori/src/trie/: trie.py  trie_solmu.py
