[tool.poetry]
name = "lausegeneraattori"
version = "0.1.0"
description = "Harjoitustyö: tietorakenteet ja algoritmit"
authors = ["Desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
