[tool.poetry]
name = "lausegeneraattori"
version = "0.1.0"
description = "Harjoitustyö: tietorakenteet ja algoritmit"
authors = ["Desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
