[tool.poetry]
name = "lausegeneraattori"
version = "0.1.0"
description = "Harjoitustyö: tietorakenteet ja algoritmit"
authors = ["Desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
